# prometheus-metrics-generator

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: build-docker-image.yml  update-docker-hub-info.yml  update-latest.yml
k8s/: deployment.yaml  service.yaml
static/css/: style.css
static/js/: app.js
templates/: index.html
