[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prometheus-metrics-generator"
version = "0.1.0"
description = "Generate Prometheus metrics for testing purposes"
authors = [
    {name = "Tomasz Habiger", email = "tomasz.habiger@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "prometheus-client>=0.19.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
